--- a/src/components/BreadcrumbComponent/Breadcrumb.style.css
+++ b/src/components/BreadcrumbComponent/Breadcrumb.style.css
@@ -8,7 +8,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: .9em;
+  font-size: 1em;
   color: var(--main-text-color);
+}
+
+.breadCrumb_container .link_btn {
+  color: var(--hover-color);
+  text-decoration: none;
+  padding: 0px 10px;
 }
 /*# sourceMappingURL=Breadcrumb.style.css.map */
