--- a/src/components/CartComponent/cartComponent.style.scss
+++ b/src/components/CartComponent/cartComponent.style.scss
@@ -2,14 +2,15 @@
     display: grid;
     padding: 10px;
     margin: auto;
+    border-radius: 10px;
+    overflow: hidden;
     .cart_item{
         display: grid;
         grid-template-columns: 200px 1fr;
         gap: 10px;
         .product_image{
             width: 100%;
-            height: 100%;
-            max-height: 300px;
+            height: 170px;
             position: relative;
             img{
                 width: 100%;
@@ -66,13 +67,34 @@
                     .color{
                         width: 30px;
                         height: 30px;
-                        background-color: rgb(133, 5, 238);
+                        border-radius: 20px;
+                        position: relative;
+                        &::before{
+                            content:'Color';
+                            position: absolute;
+                            left: -45px;
+                            top: 2px;
+                            color: var(--main-text-color);
+                            visibility: hidden;
+                            opacity: 0;
+                            transition: all linear .3s;
+                        }
+                        // background-color: rgb(133, 5, 238);
+                        &:hover::before{
+                            visibility: visible;
+                            opacity: 1;
+                        }
                     }
                 }
                 .description{
                     font-size: .9em;
                     margin-top: 10px;
                     color: var(--second-font-color);
+                }
+                .more_btn{
+                    cursor: pointer;
+                    color: tomato;
+                    margin: 5px;
                 }
             }
             .product_price_container{
@@ -82,18 +104,15 @@
                 height: 100%;
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
                 .product_amount{
                     display: flex;
                     justify-content: center;
-                    align-items: center;
                     color: var(--main-text-color);
                     span{
                         font-size: 1.5em;
                         font-weight: 400;
                         display: flex;
                         justify-content: center;
-                        align-items: center;
                         padding: 10px 15px;
                         cursor: pointer;
                         
@@ -137,13 +156,73 @@
     }
 }
 
+.empty_cart{
+    width: 100%;
+    min-height: 80vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    div{
+        display: grid;
+        align-items: center;
+        gap: 20px;
+        p{
+            font-size: 1.5em;
+            color: var(--main-text-color);
+            word-spacing: 2px;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 10px var(--second-font-color);
+        }
+        .cart_btn{
+            margin: auto;
+            button{
+                width: fit-content;
+                border-color: transparent;
+                background-color: var(--second-hover-color);
+                font-size: 1.2em;
+                margin: auto;
+                color: var(--main-text-color);
+                padding: 5px 10px;
+                letter-spacing: 5px;
+                text-transform: capitalize;
+                border-radius: 10px;
+                cursor: pointer;
+                &:hover{
+                    background-color: var(--main-text-color);
+                    color: var(--second-hover-color);
+                }
+            }
+        }
+    }
+}
 ///////////////////////////////////////////////
 .removed{
-    transform: scale(0);
+    transform: translateX(120%);
     transition: all linear .3s;
-    display: none;
-
 }
+.clear_cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    .clear_cart_btn{
+        width: fit-content;
+        padding: 10px 20px;
+        font-size: 1.5em;
+        color: white;
+        cursor: pointer;
+        background-color: tomato;
+        letter-spacing: 2px;
+        border-color: transparent;
+        border-radius: 10px;
+        margin: auto;
+        &:hover{
+            background-color: rgb(255, 38, 0);
+
+        }
+    }
+}
+
 
 @media only screen and (max-width:550px){
     .single_cart_item_container{
