--- a/src/components/NavbarComponent/Navbar.style.css
+++ b/src/components/NavbarComponent/Navbar.style.css
@@ -68,10 +68,18 @@
   text-decoration: none;
   color: var(--main-text-color);
   cursor: pointer;
+  position: relative;
 }
 
 .Navbar nav .second_nav li .nav_btn:hover {
   color: #1a6eff;
+}
+
+.Navbar nav .second_nav li .nav_btn .cart_length {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  color: tomato;
 }
 
 .Navbar nav .second_nav li .active_nav {
