--- a/src/components/ProductsContainer/ProductsContainer.style.scss
+++ b/src/components/ProductsContainer/ProductsContainer.style.scss
@@ -3,11 +3,6 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
 }
-.all_products_container_style_2 {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-}
 .products_sort {
   width: 100%;
   display: grid;
@@ -54,6 +49,15 @@
       border-radius: 5px;
     }
   }
+}
+.no_match_products{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  color: var(--main-text-color);
+  text-shadow: 2px 2px 5px var(--second-font-color);
 }
 
 @media only screen and (max-width: 700px) {
