--- a/src/components/ProductsDetailsComponent/ProductDetails.style.css
+++ b/src/components/ProductsDetailsComponent/ProductDetails.style.css
@@ -31,33 +31,32 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
 }
 
 .single_product_details_container .single_product_details .product_images .side_images .single_gallery_image {
   width: 100px;
-  height: 100px;
+  height: 80px;
   cursor: pointer;
 }
 
 .single_product_details_container .single_product_details .product_images .side_images .single_gallery_image img {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  -webkit-filter: grayscale(80%);
-          filter: grayscale(80%);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.single_product_details_container .single_product_details .product_images .side_images .single_gallery_image:hover img {
+.single_product_details_container .single_product_details .product_images .side_images .active_image {
   -webkit-filter: grayscale(0);
           filter: grayscale(0);
+  border: 2px solid var(--second-hover-color);
 }
 
 .single_product_details_container .single_product_details .product_images .main_image {
   width: 100%;
   padding-top: 15px;
-  height: 100%;
+  height: 500px;
 }
 
 .single_product_details_container .single_product_details .product_images .main_image img {
@@ -87,6 +86,7 @@
   font-size: 30px;
   font-weight: 400;
   color: var(--main-text-color);
+  text-transform: capitalize;
 }
 
 .single_product_details_container .single_product_details .product_details .product_name_price p {
@@ -124,20 +124,8 @@
   cursor: pointer;
 }
 
-.single_product_details_container .single_product_details .product_details .colors ul li:nth-of-type(1) {
-  background-color: #FF0000;
-}
-
-.single_product_details_container .single_product_details .product_details .colors ul li:nth-of-type(2) {
-  background-color: #00ffff;
-}
-
-.single_product_details_container .single_product_details .product_details .colors ul li:nth-of-type(3) {
-  background-color: #8400ff;
-}
-
-.single_product_details_container .single_product_details .product_details .colors ul li:nth-of-type(4) {
-  background-color: #ff0055;
+.single_product_details_container .single_product_details .product_details .colors ul .active_color {
+  border: 8px solid var(--hover-color);
 }
 
 .single_product_details_container .single_product_details .product_details .quantity_favorits_addTocart {
@@ -236,6 +224,14 @@
   color: white;
 }
 
+.single_product_details_container .single_product_details .product_details .out_of_stock {
+  font-size: 2em;
+  color: var(--second-hover-color);
+  font-weight: 500;
+  text-transform: capitalize;
+  text-shadow: 1px 1px 3px var(--second-font-color);
+}
+
 @media only screen and (max-width: 1000px) {
   .single_product_details_container .single_product_details {
     -ms-grid-columns: 1fr;
@@ -259,11 +255,20 @@
   }
   .single_product_details_container .single_product_details .product_images .side_images .single_gallery_image {
     width: 100%;
-    height: 100%;
   }
 }
 
 @media only screen and (max-width: 450px) {
+  .single_product_details_container .single_product_details .product_images .side_images .single_gallery_image img {
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .single_product_details_container .single_product_details .product_images .main_image {
+    width: 100%;
+    padding-top: 15px;
+    height: 100%;
+    max-height: 250px;
+  }
   .single_product_details_container .single_product_details .product_details .quantity_favorits_addTocart {
     display: -webkit-box;
     display: -ms-flexbox;
