--- a/src/components/ProductsDetailsComponent/ProductDetails.style.scss
+++ b/src/components/ProductsDetailsComponent/ProductDetails.style.scss
@@ -16,17 +16,17 @@
                 gap: 10px;
                 .single_gallery_image{
                     width: 100px;
-                    height: 100%;
+                    height: 80px;
                     cursor: pointer;
                     img{
                         width: 100%;
                         height: 100%;
-                        object-fit: contain;
-                        filter: grayscale(80%)
+                        object-fit: cover;
                     }
-                    &:hover img{
-                        filter: grayscale(0)
-                    }
+                }
+                .active_image{
+                    filter: grayscale(0);
+                    border: 2px solid var(--second-hover-color);
                 }
                 
             }
@@ -86,7 +86,9 @@
                             cursor: pointer;
                         }
                     }
-                    
+                    .active_color{
+                        border: 8px solid var(--hover-color);
+                    }
                     
                     
                 }
@@ -163,6 +165,14 @@
                     color: white;
                 }
             }
+            .out_of_stock{
+                font-size: 2em;
+                color: var(--second-hover-color);
+                font-weight: 500;
+                text-transform: capitalize;
+                text-shadow: 1px 1px 3px var(--second-font-color);
+
+            }
         }
     }
 }
@@ -193,15 +203,22 @@
     .single_product_details_container{
         .single_product_details{
             .product_images{
-               
-                .main_image{
-                    width: 100%;
-                    padding-top: 15px;
-                    height: 100%;
-                    max-height: 250px;
-
+                .side_images{
+                    .single_gallery_image{
+                        img{
+                            object-fit: contain;
+                        }
+                    }
+                    
+                    
+                    }
+                    .main_image{
+                        width: 100%;
+                        padding-top: 15px;
+                        height: 100%;
+                        max-height: 250px;
+                    }
                 }
-            }
             .product_details{
                 .quantity_favorits_addTocart{
                     display: flex;
