--- a/src/components/NavbarComponent/Navbar.style.css
+++ b/src/components/NavbarComponent/Navbar.style.css
@@ -61,7 +61,7 @@
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
-  gap: 20px;
+  gap: 30px;
 }
 
 .Navbar nav .second_nav li .nav_btn {
@@ -75,15 +75,135 @@
   color: #1a6eff;
 }
 
-.Navbar nav .second_nav li .nav_btn .cart_length {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  color: tomato;
+.Navbar nav .second_nav li .nav_btn .log_out_menu {
+  border-color: transparent;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.Navbar nav .second_nav li .active_nav {
-  color: #1a6eff !important;
+.Navbar nav .second_nav li .nav_btn .log_out_menu:focus .dropmenu, .Navbar nav .second_nav li .nav_btn .log_out_menu:active .dropmenu {
+  -webkit-transform: translate(0, 20px);
+          transform: translate(0, 20px);
+  opacity: 1;
+  visibility: visible;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu {
+  position: absolute;
+  width: 250px;
+  top: 34px;
+  left: -150px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  background-color: var(--second-item-bag);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .image_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .image_name:hover {
+  background-color: rgba(128, 128, 128, 0.336);
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .image_name .userImage {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .image_name .userImage img {
+  width: 100%;
+  height: 100%;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .image_name .user_name {
+  font-size: 1em;
+  color: var(--main-text-color);
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu hr {
+  width: 80%;
+  border-color: var(--main-text-color);
+  margin: auto;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .log_out_btn {
+  border-color: transparent;
+  background-color: var(--second-item-bag);
+  font-size: 1em;
+  color: var(--main-text-color);
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.Navbar nav .second_nav li .nav_btn .log_out_menu .dropmenu .log_out_btn:hover {
+  background-color: rgba(128, 128, 128, 0.336);
+}
+
+.Navbar nav .second_nav li .nav_btn .cart_length {
+  position: absolute;
+  top: -19px;
+  right: -19px;
+  color: white;
+  font-weight: 400;
+  background-color: tomato;
+  width: 25px;
+  height: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
 }
 
 .Navbar nav .Nav_links {
@@ -153,12 +273,19 @@
             align-items: center;
     gap: 10px;
   }
+  .Navbar nav .second_nav {
+    gap: 20px;
+  }
   .Navbar nav .second_nav li .nav_btn {
     text-decoration: none;
     color: var(--main-text-color);
   }
   .Navbar nav .second_nav li .nav_btn:hover {
     color: #1a6eff;
+  }
+  .Navbar nav .second_nav li .cart_length {
+    font-weight: 300;
+    padding: 1px;
   }
   .Navbar nav .Nav_links {
     display: none;
