--- a/src/components/BreadcrumbComponent/Breadcrumb.style.css
+++ b/src/components/BreadcrumbComponent/Breadcrumb.style.css
@@ -17,4 +17,10 @@
   text-decoration: none;
   padding: 0px 10px;
 }
+
+@media only screen and (max-width: 400px) {
+  .breadCrumb_container {
+    padding: 10px 5px;
+  }
+}
 /*# sourceMappingURL=Breadcrumb.style.css.map */
