--- a/src/components/SubscripeComponent/Subscripe.style.scss
+++ b/src/components/SubscripeComponent/Subscripe.style.scss
@@ -51,8 +51,8 @@
           cursor: pointer;
           transition: all linear 0.3s;
           &:hover {
-            background-color: white;
-            color: #1a6eff;
+            background-color:  #0447bb;
+            color:white;
           }
         }
       }
