--- a/src/components/CheckOutComponent/CheckOut.style.css
+++ b/src/components/CheckOutComponent/CheckOut.style.css
@@ -60,16 +60,16 @@
   padding: 10px 30px;
   text-transform: capitalize;
   border-color: transparent;
-  background-color: #53b5aa;
+  background-color: var(--hover-color);
   border-radius: 5px;
   -webkit-transition: .3s;
   transition: .3s;
   cursor: pointer;
-  color: var(--main-text-color);
+  color: white;
 }
 
 .check_out_container .check_out button:hover {
-  background-color: #096e63;
+  background-color: #02338d;
   color: white;
 }
 
