--- a/src/components/NavbarComponent/Navbar.style.css
+++ b/src/components/NavbarComponent/Navbar.style.css
@@ -187,13 +187,13 @@
 
 .Navbar nav .second_nav li .nav_btn .cart_length {
   position: absolute;
-  top: -19px;
-  right: -19px;
+  top: -15px;
+  right: -15px;
   color: white;
-  font-weight: 400;
-  background-color: tomato;
-  width: 25px;
-  height: 25px;
+  font-weight: 300;
+  background-color: var(--hover-color);
+  width: 20px;
+  height: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -204,6 +204,7 @@
       -ms-flex-align: center;
           align-items: center;
   border-radius: 50%;
+  font-size: .8em;
 }
 
 .Navbar nav .Nav_links {
