--- a/src/components/ProductDescription&DetailsComponent/ProductDescription.style.scss
+++ b/src/components/ProductDescription&DetailsComponent/ProductDescription.style.scss
@@ -13,18 +13,18 @@
         font-weight: 400;
         padding: 10px 20px;
         border-radius: 50px;
-        border: 1px solid #FBB03B;
+        border: 1px solid var(--hover-color);;
         background-color: transparent;
         cursor: pointer;
         color: var(--main-text-color);
         transition: .4s;
         &:hover{
-            background-color:#FBB03B ;
+            background-color:var(--hover-color); ;
             color: white;
         }
     }
     .active_btn{
-        background-color:#FBB03B ;
+        background-color:var(--hover-color); ;
             color: white;
     }
     .reviews_btn{
@@ -133,7 +133,7 @@
                         gap: 5px;
                         li{
                             font-size: 1em;
-                            color: #FBB03B;
+                            color: var(--hover-color);
                         }
                     }
                 }
@@ -164,7 +164,7 @@
                         font-size: 1em;
                         color: var(--main-text-color);
                         .star{
-                            color: #FBB03B;
+                            color: var(--hover-color);;
                         }
                         .progress_par_container{
                             width: 150px;
@@ -173,7 +173,7 @@
                             height: 6px;
                             overflow: hidden;
                             .progress_bar{
-                                background-color:#FBB03B ;
+                                background-color:var(--hover-color);;
                                 height: 100%;
                             }
                         }
@@ -188,7 +188,7 @@
            
            button{
             border-color: transparent;
-            background-color: #FBB03B;
+            background-color:var(--hover-color);;
             color: var(--main-text-color);
             font-size: 1.1em;
             word-spacing: 2px;
@@ -200,7 +200,7 @@
             transition: .3s;
             cursor: pointer;
             &:hover{
-                background-color: #ff9d00;
+                background-color: #0040ad;
                 color: white;
             }
            }
@@ -248,7 +248,7 @@
                             grid-gap: 5px;
                             gap: 5px;
                             li{
-                                color: #FBB03B;
+                                color: var(--hover-color);;
                             }
                             
                         }
@@ -284,7 +284,7 @@
             grid-template-columns: 1fr;
             gap: 50px;
             .description{
-                border-bottom: 1px solid #FBB03B;
+                border-bottom: 1px solid var(--hover-color);;
                 padding-bottom: 20px;
                 h4{
                     
